--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site One</title>
+    <title>Site Two</title>
 </head>
 <body>
-    <h1>Site One</h1>
+    <h1>Site Two</h1>
     <h2>xUbuntu-Server-22.04.3-02-Clone-01</h2>
 </body>
 </html>
