--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Site Two</h1>
     <h2>xUbuntu-Server-22.04.3-02-Clone-01</h2>
+    <p>This is a test website. Have a nice day</p>
 </body>
 </html>
