--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Site Two</h1>
-    <h2>xUbuntu-Server-22.04.3-02-Clone-01</h2>
+    <h2>xUbuntu Server - Clone 01</h2>
     <p>This is a test website. Have a nice day</p>
 </body>
 </html>
